# sturdy-meme

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Info.plist.in  README.md  VULKAN_HPP_MIGRATION_PLAN.md  build-claude.sh  preprocess.sh  run-debug.sh  setup-claude.sh  vcpkg.json
tools/: CMakeLists.txt  biome_preprocess.cpp  calm_encode_library.py  calm_export.py  caustics_gen.cpp  convert_fbx_to_training.py  convert_mocap_to_training.py  erosion_preprocess.cpp  motion_dataset.py  sbsar_render.cpp  scale_tree_presets.py  shader_reflect.cpp  terrain_preprocess.cpp
tools/biome_preprocess/: BiomeGenerator.cpp  BiomeGenerator.h  SettlementSVG.cpp  SettlementSVG.h  WatershedMetrics.cpp  biome_preprocess.cpp
tools/cape_texture_gen/: cape_texture_gen.cpp
tools/caustics_gen/: caustics_gen.cpp
tools/city_generator/: CityOutput.h  CurtainWall.h  Geometry.h  Graph.h  Model.h  Patch.h  README.md  Voronoi.h  Ward.cpp  Ward.h  WaterFeatures.h  main.cpp
tools/common/: ParallelProgress.h  bc_compress.h  dds_file.h  stb_impl.cpp
tools/dwelling_generator/: DwellingGenerator.cpp  DwellingGrid.cpp  DwellingGrid.h  DwellingHouse.cpp  DwellingHouse.h  DwellingPlan.cpp  DwellingPlan.h  DwellingSVG.cpp  DwellingSVG.h  README.md  main.cpp
tools/foam_noise_gen/: foam_noise_gen.cpp
tools/material_texture_gen/: material_texture_gen.cpp
tools/ml/: export.py
tools/river_sources_preprocess/: river_sources_preprocess.cpp
tools/road_generator/: RoadPathfinder.cpp  RoadPathfinder.h  RoadSVG.cpp  RoadSVG.h  RoadSpline.h  SpaceColonization.cpp  SpaceColonization.h  StreetGenerator.cpp  main.cpp
tools/sbsar_render/: sbsar_render.cpp
tools/settlement_generator/: SettlementGenerator.cpp  SettlementGenerator.h  SettlementSVG.h  main.cpp
tools/shader_reflect/: shader_reflect.cpp
tools/skinned_mesh_lod/: MeshSimplifier.cpp  MeshSimplifier.h  main.cpp
tools/terrain/: BiomeGenerator.h  ErosionSimulator.cpp  ErosionSimulator.h  erosion_preprocess.cpp
tools/terrain_patch_generator/: generate_test_data.cpp  main.cpp
tools/terrain_preprocess/: TerrainImporter.cpp  terrain_preprocess.cpp
tools/tile_generator/: SplineRasterizer.h  TileCompositor.cpp  TileCompositor.h  main.cpp
tools/town_generator/: CMakeLists.txt  MFCG_FIX_PLAN.md  rename_cpp.py
tools/town_generator/building/: CurtainWall.cpp  CurtainWall.hpp  Cutter.hpp  Model.hpp  Patch.hpp  Topology.cpp  Topology.hpp
tools/town_generator/geom/: Point.hpp  Polygon.hpp  Segment.hpp  Voronoi.hpp
tools/town_generator/include/town_generator/building/: Bisector.h  Block.h  Blueprint.h  Building.h  Canal.h  Cell.h  City.h  CurtainWall.h  Cutter.h  District.h  EdgeData.h  Grower.h  Model.h  Topology.h  WardGroup.h
tools/town_generator/include/town_generator/geom/: DCEL.h  EdgeChain.h  GeomUtils.h  Point.h  PolyBool.h  Polygon.h
tools/town_generator/include/town_generator/svg/: SVGWriter.h
tools/town_generator/include/town_generator/utils/: Bisector.h  Bloater.h  Noise.h  Random.h
tools/town_generator/include/town_generator/wards/: Alleys.h  Castle.h  Farm.h  Harbour.h  Market.h  Park.h  Ward.h
tools/town_generator/mapping/: SVGRenderer.hpp  SVGWriter.hpp
tools/town_generator/reference/: MFCG_CLEAN_MISSING.md  mfcg.js  mfcg.min.js
tools/town_generator/reference/mfcg/: 01-jscomp.js  02-lime-init.js  03-howler.js  04-pako.js  05-lzma.js  06-filesaver.js
tools/town_generator/reference/mfcg-clean/: README.md  index.js  package.json
tools/town_generator/reference/mfcg-clean/core/: MathUtils.js  Point.js  Random.js
tools/town_generator/reference/mfcg-clean/export/: JsonExporter.js
tools/town_generator/reference/mfcg-clean/geometry/: Chaikin.js  Circle.js  DCEL.js  GeomUtils.js  Graph.js  PoissonPattern.js  PolyBool.js  PolygonUtils.js  Segment.js  (+2 more)
tools/town_generator/src/: main.cpp
tools/town_generator/src/building/: Bisector.cpp  Block.cpp  Building.cpp  Canal.cpp  Cell.cpp  City.cpp  CurtainWall.cpp  District.cpp  Model.cpp  Topology.cpp  WardGroup.cpp
tools/town_generator/src/geom/: DCEL.cpp  GeomUtils.cpp  Graph.cpp  PolyBool.cpp  Polygon.cpp  Voronoi.cpp
tools/town_generator/src/svg/: SVGWriter.cpp
tools/town_generator/src/utils/: Bisector.cpp  Random.cpp
tools/town_generator/src/wards/: AdministrationWard.cpp  Alleys.cpp  Castle.cpp  Cathedral.cpp  CommonWard.cpp  CraftsmenWard.cpp  Farm.cpp  GateWard.cpp  Harbour.cpp  Market.cpp  MerchantWard.cpp  MilitaryWard.cpp  Park.cpp  PatriciateWard.cpp  Slum.cpp  Ward.cpp
tools/town_generator/tests/: test_geometry_utils.cpp  test_new_geometry.cpp  test_point.cpp  test_polygon.cpp
tools/town_generator/wards/: Farm.hpp  Market.hpp  Ward.hpp
tools/town_generator1/: CMakeLists.txt  PLAN.md
tools/town_generator1/src/: main.cpp
tools/town_generator1/src/building/: CurtainWall.cpp  Cutter.cpp  Patch.cpp
tools/town_generator1/src/geom/: Circle.cpp  GeomUtils.cpp  Graph.cpp  Point.cpp  Polygon.cpp  Segment.cpp  Spline.cpp
tools/town_generator1/src/svg/: SVGWriter.cpp
tools/town_generator1/src/utils/: MathUtils.cpp  Random.cpp
tools/town_generator1/src/wards/: AdministrationWard.cpp  Castle.cpp  Cathedral.cpp  CommonWard.cpp  CraftsmenWard.cpp  Farm.cpp  GateWard.cpp  Market.cpp  MerchantWard.cpp  MilitaryWard.cpp  Park.cpp  PatriciateWard.cpp  Slum.cpp  Ward.cpp
tools/town_generator1/tests/: test_graph.cpp  test_segment.cpp
tools/town_generator2/: CMakeLists.txt
tools/town_generator2/src/: Castle.cpp  CurtainWall.cpp  Model.cpp  Topology.cpp  Ward.cpp  main.cpp
tools/town_generator2/tests/: test_model.cpp  test_polygon.cpp  test_voronoi.cpp
tools/unicon_training/: __init__.py  config.py  environment.py  export.py  motion_loader.py  policy.py  requirements.txt  reward.py  state_encoder.py  test_export.py  train.py
tools/vegetation_generator/: VegetationConfig.h  VegetationPlacer.cpp  VegetationPlacer.h  main.cpp
tools/watershed/include/: d8.h  elevation_grid.h  png_io.h  river_binary.h  river_svg.h  watershed.h
tools/watershed/src/: d8.cpp  main.cpp  png_io.cpp  river_binary.cpp  river_svg.cpp  watershed.cpp
(+1761 files in other folders)
